Added Ghost Planet to Entertainment

--- a/new_liptv.html
+++ b/new_liptv.html
@@ -411,15 +411,16 @@ function Boxes(type) {
 		}
 	if(type == "et") {
 		ClearBoxes()
-		SetSquare("<a href='javascript:Do_DCTV()'><white>DiamondClub.TV</white></a>", "dctv.jpg", 3)
-		SetSquare("<a href='javascript:Do_LWT()'>Last Week Tonight</a>", "lwt.jpg", 4)
-		SetSquare("<a href='javascript:Do_Film()'>MovieClips Trailers</a>", "film.jpg", 5)
-		SetSquare("<a href='javascript:Do_TV()'><white>JoeBlo TV Trailers</white></a>", "tv.jpg", 6)
-		SetSquare("<a href='javascript:Do_DC()'><white>DC Entertainment</white></a>", "dc.jpg", 7)
-		SetSquare("<a href='javascript:Do_Marvel()'><white>Marvel</white></a>", "marvel.jpg", 8)
-		SetSquare("<a href='javascript:Do_Rap()'>Rap Ressurection</a>", "rap.jpg", 9)
-		SetSquare("<a href='javascript:Do_YTSports()'>YouTube Sports</a>", "ytsports.jpg", 10)
-		SetSquare("<a href='javascript:Do_JUCE()'>JUCE TV</a>", "juce.jpg", 11)
+		SetSquare("<a href='javascript:Do_Ghost()'><white>Ghost Planet 24/7</white></a>", "ghost.png", 3)
+		SetSquare("<a href='javascript:Do_DCTV()'><white>DiamondClub.TV</white></a>", "dctv.jpg", 4)
+		SetSquare("<a href='javascript:Do_LWT()'>Last Week Tonight</a>", "lwt.jpg", 5)
+		SetSquare("<a href='javascript:Do_Film()'>MovieClips Trailers</a>", "film.jpg", 6)
+		SetSquare("<a href='javascript:Do_TV()'><white>JoeBlo TV Trailers</white></a>", "tv.jpg", 7)
+		SetSquare("<a href='javascript:Do_DC()'><white>DC Entertainment</white></a>", "dc.jpg", 8)
+		SetSquare("<a href='javascript:Do_Marvel()'><white>Marvel</white></a>", "marvel.jpg", 9)
+		SetSquare("<a href='javascript:Do_Rap()'>Rap Ressurection</a>", "rap.jpg", 10)
+		SetSquare("<a href='javascript:Do_YTSports()'>YouTube Sports</a>", "ytsports.jpg", 11)
+		SetSquare("<a href='javascript:Do_JUCE()'>JUCE TV</a>", "juce.jpg", 12)
 	}
 }
 function ClearBoxes() {
