Fixed Newsmax TV Stream URL

--- a/new_liptv.html
+++ b/new_liptv.html
@@ -55,7 +55,7 @@ ABC_News = "http://abcnews.go.com/video/embed?id=39180446";
 ABC_News2 = "http://abcnews.go.com/video/embed?id=39180211";
 ABC_News3 = "http://abcnews.go.com/video/embed?id=39180111";
 CBSN = "http://www.cbsnews.com/live/compact/";
-Newsmax = "https://www.youtube.com/embed/INDQmzbHhI8?autoplay=1"
+Newsmax = "https://www.youtube.com/embed/a4uUEXZjigo?autoplay=1"
 FNC = "https://www.youtube.com/embed/videoseries?list=UUj-X75_nBD5UN9oDkpz-4-w&autoplay=1;hl=en_US";
 CNN = "https://www.youtube.com/embed/videoseries?list=UUupvZG-5ko_eiXAupbDfxWw&autoplay=1;hl=en_US";
 MSNBC = "https://www.youtube.com/embed/videoseries?list=UUaXkIU1QidjPwiAYu6GcHjg&autoplay=1;hl=en_US";
