--- a/new_liptv.html
+++ b/new_liptv.html
@@ -297,9 +297,9 @@ function SetSquare(name, photo, square) {
 function Boxes(type) {
 	if(type == "default") {
 		ClearBoxes()
-		SetSquare("<a href='javascript:Do_Ghost()'><white>Ghost Planet 24/7</white></a>", "ghost.png", 0)
-		SetSquare("<a href='javascript:Do_CNReboot()'>CNReboot</a>", "cnreb.png", 1)
-		SetSquare("<a href='javascript:Do_NReboot()'>NReboot</a>", "nreb.png", 2)
+		SetSquare("<a href='javascript:Do_C()'>Studio C</a>", "c.jpg", 0)
+		SetSquare("<a href='javascript:Do_Daily()'>The Daily Show</a>", "daily.jpg", 1)
+		SetSquare("<a href='javascript:Do_PS()'><white>Playstation</white></a>", "ps.jpg", 2)
 		
 		SetSquare("<a href='javascript:Do_Xbox()'><white>Xbox</white></a>", "x.jpg", 3)
 		SetSquare("<a href='javascript:Do_PS()'><white>Playstation</white></a>", "ps.jpg", 4)
